Fix rating icons on mobile (#77)

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -59,6 +59,10 @@ body {
   padding-right: 2em;
 }
 
+.post-rating {
+  width: 100%;
+}
+
 .rating-icon {
   width: 2em;
 }
